--- a/webapp/src/app/shared/dropdown/dropdown.component.css
+++ b/webapp/src/app/shared/dropdown/dropdown.component.css
@@ -10,7 +10,7 @@
   gap: 12px;
   padding-top: 6px;
   justify-content: center;
-  align-items: center;  
+  align-items: center;
 }
 
 /* ::ng-deep .dropdown-wrapper .mat-form-field.mat-focused.mat-primary{
@@ -71,13 +71,13 @@ img{
   gap: 10px;
 }
 
-::ng-deep .mat-checkbox-layout{
+:host ::ng-deep .mat-checkbox-layout{
   padding: 8px 16px;
   align-items: center !important;
   width: 100%;
 }
 
-::ng-deep .mat-checkbox-inner-container{
+:host ::ng-deep .mat-checkbox-inner-container{
   margin: 0 !important;
   margin-right: 8px !important;
 }
@@ -91,7 +91,7 @@ img{
   width: 100%;
 }
 
-::ng-deep .mat-checkbox:hover{
+:host ::ng-deep .mat-checkbox:hover{
   background-color: rgba(0,0,0,.04);
 }
 
