--- a/webapp/src/app/shared/table-filters/table-filter-chip/table-filter-chip.component.css
+++ b/webapp/src/app/shared/table-filters/table-filter-chip/table-filter-chip.component.css
@@ -27,6 +27,29 @@
     cursor: pointer;
 }
 
-.filter-chip-menu {
+.filters-menu-container {
+    width: 202px;
+    max-height: 336px;
     background: white;
+    border: 1px solid rgba(16 40 72 / 9%);
+    border-radius: 6px;
+    box-shadow: 0 2px 2px -1px rgba(27 35 44 / 4%), 0 8px 16px -2px rgba(27 36 44 / 12%);
+}
+
+.filters-chip-menu {
+    padding-bottom: 8px;
+    font-size: 14px;
+    line-height: 24px;
+    font-family: var(--text-font-family);
+    overflow-y: auto;
+}
+
+.filters-chip-menu .fcm-item {
+    padding: 6px 16px;
+    color: #272e35;
+}
+
+.filters-chip-menu .fcm-item:hover {
+    cursor: pointer;
+    background: rgba(2 47 82 / 6%);
 }
