fix(table-filters): max option chars count

--- a/webapp/src/app/shared/table-filters/table-filter-chip/table-filter-chip.component.css
+++ b/webapp/src/app/shared/table-filters/table-filter-chip/table-filter-chip.component.css
@@ -28,7 +28,6 @@
 }
 
 .filters-menu-container {
-    width: 202px;
     max-height: 336px;
     background: white;
     border: 1px solid rgba(16 40 72 / 9%);
@@ -45,7 +44,7 @@
 }
 
 .filters-chip-menu .fcm-item {
-    padding: 6px 16px;
+    padding: 6px 8px 6px 16px;
     color: #272e35;
 }
 
