--- a/webapp/src/app/shared/table-filters/table-filter-chip/table-filter-chip.component.html
+++ b/webapp/src/app/shared/table-filters/table-filter-chip/table-filter-chip.component.html
@@ -1,9 +1,9 @@
 <div
     class="flex flex-align-center table-filter-chip"
     cdkOverlayOrigin
-    #filterMenu="cdkOverlayOrigin"
+    #optionsMenuTrigger="cdkOverlayOrigin"
 >
-    <div class="tfc-text-container" (click)="toggleFilterMenu()">
+    <div class="tfc-text-container" (click)="toggleOptionsMenu()">
         <span class="tfc-name"> {{ category }}:&nbsp;</span>
 
         <span class="tfc-value" [title]="appliedFilters.length === 1 ? appliedFilters[0].name : ''">
@@ -14,19 +14,19 @@
             <ng-template #moreFilters> {{ appliedFilters.length }} Selected </ng-template>
         </span>
     </div>
-    <mat-icon class="tfc-close-icon" (click)="clearFilter.emit(category)">close</mat-icon>
+    <mat-icon class="tfc-close-icon" (click)="clear.emit(category)">close</mat-icon>
 </div>
 
 <ng-template
     cdkConnectedOverlay
-    [cdkConnectedOverlayOrigin]="filterMenu"
-    [cdkConnectedOverlayOpen]="isFilterMenuShown"
-    [cdkConnectedOverlayOffsetY]="filtersMenuOffsetY"
-    (overlayOutsideClick)="isFilterMenuShown = false"
+    [cdkConnectedOverlayOrigin]="optionsMenuTrigger"
+    [cdkConnectedOverlayOpen]="isOptionsMenuOpen"
+    [cdkConnectedOverlayOffsetY]="optionsMenuOffsetY"
+    (overlayOutsideClick)="isOptionsMenuOpen = false"
     (overlayKeydown)="overlayKeyDown($event)"
 >
     <div class="filters-menu-container flex flex-col">
-        <app-table-filter-search [(text)]="filterOptionQuery"></app-table-filter-search>
+        <app-table-filter-search [(text)]="optionFilterQuery"></app-table-filter-search>
         <ul class="filters-chip-menu">
             <li *ngFor="let option of filterOptionsByQuery()" class="fcm-item" [title]="option">
                 <mat-checkbox
