feat(header): navigate to dashboard upon company logo click

--- a/webapp/src/app/post-login-app/common/header/header.component.css
+++ b/webapp/src/app/post-login-app/common/header/header.component.css
@@ -173,6 +173,10 @@
     height: 28px;
 }
 
+.header-company-logo:hover {
+    cursor: pointer;
+}
+
 .header-user-notification {
     margin: 4px 16px 0 0;
     width: 25px;
