--- a/webapp/src/app/shared/table-filters/table-filter-chip/table-filter-chip.component.html
+++ b/webapp/src/app/shared/table-filters/table-filter-chip/table-filter-chip.component.html
@@ -30,6 +30,7 @@
         <ul class="filters-chip-menu">
             <li *ngFor="let option of filterOptionsByQuery()" class="fcm-item" [title]="option">
                 <mat-checkbox
+                    color="primary"
                     [checked]="appliedFiltersDict[option]"
                     (change)="updateFilterOption(option, $event.checked)"
                 >
