fix: fixed sort in violations

--- a/webapp/src/app/shared/table-filters/table-filter-search/table-filter-search.component.html
+++ b/webapp/src/app/shared/table-filters/table-filter-search/table-filter-search.component.html
@@ -1,5 +1,5 @@
-<div class="filter-search-container">
-    <mat-icon class="filter-search-icon">search</mat-icon>
+<div class="filter-search-container flex gap-8">
+    <img src="/assets/icons/search-icon.svg">
     <input
         class="filter-search-input"
         type="text"
