--- a/webapp/src/app/pacman-features/modules/omnisearch/omni-search-details/omni-search-details.component.html
+++ b/webapp/src/app/pacman-features/modules/omnisearch/omni-search-details/omni-search-details.component.html
@@ -3,9 +3,9 @@
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); You may not use
  * this file except in compliance with the License. A copy of the License is located at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * or in the "license" file accompanying this file. This file is distributed on
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, express or
  * implied. See the License for the specific language governing permissions and
@@ -28,7 +28,11 @@
                     <div class="loader" *ngIf="infiniteScrollCalled == true"></div>
                     <div class="absolute search-result-count" *ngIf='dataComing && !showLoader && !infiniteScrollCalled'>Showing {{numOfCardShown | number}} of {{totalNumOfCards | number}} Results</div>
                 </div>
-                <div class="search-card-each pointer flex flex-col relative" *ngFor="let searchCard of searchResultsData ; let i = index " (click)="navigateTo(searchCard)">
+                <div
+                    class="search-card-each pointer flex flex-col relative"
+                    *ngFor="let searchCard of searchResultsData; let i = index"
+                    (click)="navigateTo(searchCard)"
+                >
                     <div class='upper-section-wrapper flex flex-col flex-grow'>
                     <div class="hover-element flex">
                         <p class="search-card-name nowrap-ellipsis" *ngIf="searchCard._id">
@@ -108,7 +112,7 @@
                         </p>
                     </div>
                     </div>
-                    <div class='flex flex-row flex-between'>        
+                    <div class='flex flex-row flex-between'>
                         <div class="search-card-category pointer nowrap-ellipsis left-card" *ngIf="searchCard['searchCategory']">{{searchCard.searchCategory}}</div>
                      </div>
                     <img *ngIf="searchCard['imagePath']" class="search-card-targettype-icon absolute" src="{{searchCard['imagePath']}}">
