feat(contextual-menu): disabled auto close

--- a/webapp/src/app/post-login-app/post-login-app.component.html
+++ b/webapp/src/app/post-login-app/post-login-app.component.html
@@ -36,6 +36,7 @@
                 opened="true"
                 (mouseenter)="mouseenter()"
                 (mouseleave)="mouseleave()"
+                disableClose
             >
                 <div class="contextual-menu-container">
                     <app-contextual-menu
